[package]
name = "block-chain-rust"
version = "0.1.0"
authors = ["neo <neo.yun@cloudminds.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#异步包
tokio = { version = "0.3", features = ["full"] }
#时间处理包
chrono = "0.4.19"
