[package]
name = "block-chain-rust"
version = "0.1.0"
authors = ["neo <neo.yun@cloudminds.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#异步包
tokio = { version = "0.3", features = ["full"] }
#时间处理包
chrono = "0.4.19"
#sha3加密包
tiny-keccak = { version = "2.0", features = ["sha3"] }
#大数包，用来做u256比对
num-bigint = "0.3"
num-traits = "0.2"